<resources>
    <string name="app_name">SQLiteViewer</string>
    <string name="about_credits">Credits</string>
    <string name="about_libraries">Libraries</string>
    <string name="about_opensource">Open Source</string>
    <string name="app_icon_credit_Niko">App Icons by %1$s\n\nwebsite: %2$s\n\nAll rights reserved by the designer with exclusive forever license for the official app only</string>
    <string name="libsu_library_credit">Root library by %1$s\n\nGithub url: %2$s\n\nLicense: %3$s</string>
    <string name="tableview_library_credit">TableView library by %1$s\n\nGithub url: %2$s\n\nLicense: %3$s</string>
    <string name="csv_export_library_credit">FastCSV CSV export library by %1$s\n\nGithub URL: %2$s\n\nLicense: %3$s</string>
    <string name="splash_screen_library_credit">AwesomeSplash library by %1$s\n\nGithub URL: %2$s\n\nLicense: %3$s</string>
    <string name="opensource_info">This app is opensourced and the source could be obained at \n\nGitlab url: %1$s\n\nLicense: %2$s</string>
    <string name="menu_about_title">About</string>
    <string name="storage_permission_request_title">Allow access to storage</string>
    <string name="storage_permission_request_summary">Permission to access storage is required to read the databases.Allow?</string>
    <string name="ok">OK</string>
    <string name="title_activity_table_list">TableList</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_search">search</string>
    <string name="search_hint">search …</string>
    <string name="preference_settings_table_row_count_key" translatable="false">table_row_count</string>
    <string name="preference_settings_table_row_count_title">Number of rows per page</string>
    <string name="preference_settings_table_row_count_summary">Set the number of rows displayed per page</string>
    <string name="menu_donate">Donate</string>
    <string name="donate_activity_label">Donate</string>
    <string name="preference_settings_splash_screen_key" translatable="false">splash_screen_key</string>
    <string name="preference_settings_splash_screen_title">Enable/Disable splash screen</string>
    <string name="preference_settings_splash_screen_summary">Settings to enable/disable splash screen</string>
    <string name="table_cell_popup_menu_copy">Copy</string>
    <string name="table_cell_popup_menu_share">Share</string>
    <string name="table_cell_popup_menu_toast_message">Data copied to clipboard</string>
    <string name="toast_message_database_not_open">Error! Database not open. Please try again</string>
    <string name="toast_message_table_empty">Table is empty</string>
    <string name="menu_tabledata_export_csv_title">Export as CSV</string>
    <string name="menu_table_data_bottom_bar_next_title">Next</string>
    <string name="menu_table_data_bottom_bar_previous_title">Previous</string>
    <string name="export_progress_dialog_title">Exporting…</string>
    <string name="export_progress_dialog_message">Please wait while the data is exported to CSV</string>
    <string name="toast_message_export_success">Exported successfully</string>
    <string name="export_edittext_empty_error_message">FileName cannot be empty</string>
    <string name="export_fileName_dialog_title">Export CSV</string>
    <string name="export_fileName_dialog_edittext_hint">File Name</string>
    <string name="floating_action_button_custom_query_hint">Custom Query</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support">Get help</string>
    <string name="preference_max_export_query_count_key" translatable="false">max_export_query_count</string>
    <string name="prefs_category_table_view_settings_summary">Settings for table view</string>
    <string name="prefs_category_table_view_settings_title">Table view settings</string>
    <string name="prefs_category_export_settings_title">Export Settings</string>
    <string name="prefs_category_export_settings_summary">Settings for exporting as csv</string>
    <string name="prefs_max_export_query_count_title">Max query count</string>
    <string name="prefs_max_export_query_count_summary">Set the number of rows to fetch per query.\nNote: Higher value will cause Out of memory error</string>
    <string name="prefs_category_splash_screen_settings_summary">Settings for splash screen</string>
    <string name="prefs_category_splash_screen_settings_title">Splash Screen</string>
    <string name="toast_message_failed_export_message">Failed to write to file! Try again</string>
    <string name="preference_export_charset_key" translatable="false">export_file_charset_key</string>
    <string name="preference_export_charset_title">Export file charset</string>
    <string name="preference_export_charset_summary">Charset for exported file Default: UTF-8</string>
    <string name="preference_export_charset_dialog_title">File charset</string>
    <string name="toast_message_intent_filter_no_uri_data">No uri is passed! Cannot open database</string>
    <string name="countly_basic_crash_reporting_key">basic_crash_reporting_key</string>
    <string name="countly_basic_crash_reporting_summary">Enable basic crash reporting. No crash data outside the app is collected</string>
    <string name="countly_basic_crash_reporting_title">Enable basic crash reporting</string>
    <string name="countly_update_notification_key">update_notification_key</string>
    <string name="countly_update_notification_title">Show update notification</string>
    <string name="countly_update_notification_summary">Show notification when there is an update to the app</string>
    <string name="countly_anonymous_usage_stats_key">anonymous_usage_stats_key</string>
    <string name="countly_anonymous_usage_stats_title">Anonymous usage statistics</string>
    <string name="countly_anonymous_usage_stats_summary">Enable anonymous usage statistics. No personally identifiable information is collected</string>
    <string name="alert_dialog_analytics_title">Allow anonymous analytics</string>
    <string name="alert_dialog_analytics_message">Do you want to allow anonymous crash reporting and usage metrics now?\nRead the privacy policy to know more on what data are collected</string>
    <string name="alert_dialog_analytics_positive_btn_text">Enable analytics</string>
    <string name="alert_dialog_analytics_neutral_btn_text">Enable Crash reporting only</string>
    <string name="alert_dialog_analytics_negative_btn_text">Disable everything</string>
    <string name="prefs_category_analytics_settings_title">Analytics settings</string>
    <string name="prefs_category_analytics_settings_summary">Manage analytics and crash reporting settings</string>
    <string name="toast_message_analytics_app_restart_required_message">Analytics settings changes will take effect from next app launch</string>
</resources>
