<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:summary="@string/prefs_category_table_view_settings_summary"
        android:title="@string/prefs_category_table_view_settings_title">
        <EditTextPreference
            android:id="@+id/table_row_count"
            android:defaultValue="50"
            android:key="@string/preference_settings_table_row_count_key"
            android:maxLength="3"
            android:numeric="integer"
            android:summary="@string/preference_settings_table_row_count_summary"
            android:title="@string/preference_settings_table_row_count_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:summary="@string/prefs_category_export_settings_summary"
        android:title="@string/prefs_category_export_settings_title">
        <EditTextPreference
            android:id="@+id/prefs_max_export_query_count"
            android:defaultValue="50"
            android:key="@string/preference_max_export_query_count_key"
            android:maxLength="3"
            android:numeric="integer"
            android:summary="@string/prefs_max_export_query_count_summary"
            android:title="@string/prefs_max_export_query_count_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:summary="@string/prefs_category_splash_screen_settings_summary"
        android:title="@string/prefs_category_splash_screen_settings_title">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_settings_splash_screen_key"
            android:summary="@string/preference_settings_splash_screen_summary"
            android:title="@string/preference_settings_splash_screen_title" />
    </PreferenceCategory>

</PreferenceScreen>