<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item
        android:id="@+id/donate"
        android:orderInCategory="2"
        android:title="@string/menu_donate"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="3"
        android:title="@string/menu_about_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_support"
        android:orderInCategory="4"
        android:title="@string/menu_support"
        app:showAsAction="never" />
</menu>